<resources>
    <string name="app_name">My Application10</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Back</string>

    <string name="hello_first_fragment">App test</string>
    <string name="txt_login_home">login sucess</string>
</resources>